# projen-practical-constructs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  projen-practical-constructs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: create-next-tag.yml  create-release-pre.yml  create-release.yml  master-build.yml  pr-build.yml  tag-publish.yml
example/: .coveragerc  .gitattributes  .gitignore  .projenrc.py  LICENSE  Makefile  constraints-dev.txt  constraints.txt  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
example/.projen/: deps.json  files.json  tasks.json
example/src/hello_world/: __init__.py  hello_world.py
example/tests/hello_world/: test_hello_world.py
examples/python/: .gitignore  .projenrc.py  Makefile  Makefile-projen  constraints-dev.txt  constraints.txt  mypy.ini  package.json  pyproject.toml  pytest.ini
examples/python/.projen/: deps.json  files.json  tasks.json
examples/python/src/hello_world/: hello.py  hello_world.py
examples/python/tests/hello_world/: test_hello_world.py
lib/: .eslintrc.js  .gitattributes  .gitignore  .npmignore  .projenrc.ts  Makefile  README.md  package-lock.json  package.json
lib/.projen/: deps.json  files.json  tasks.json
lib/projen-practical-constructs-test-BD69Ck/: Bar.ts  Baz.ts  Foo.ts  Spikes.ts  U.ts
lib/src/: build.test.ts  build.ts  hello.test.ts  index.ts  lint.test.ts  lint.ts  project.test.ts  project.ts  pyproject.ts  spike-generated.ts  spike.ts  tasks.ts  test.test.ts  test.ts  utils.test.ts
lib/src/__snapshots__/: build.test.ts.snap  project.test.ts.snap  test.test.ts.snap
lib/src/common/: constants.ts  index.ts  test-project.test.ts  test-project.ts
lib/src/components/: index.ts  mypy.test.ts  mypy.ts  package.test.ts  package.ts  pip-audit.test.ts  pip-audit.ts  pip.test.ts  pip.ts  pytest.ts  ruff.test.ts  ruff.ts  sample.ts
lib/src/constructs/: package.ts  pyproject.test.ts  pyproject.ts
lib/src/files/: coveragerc.ts  index.ts  pyproject-toml.test.ts  pyproject.ts  (+10 more)
(+100 files in other folders)
