[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "0.0.1"
description = ""
readme = ""
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [ ]
dependencies = [ ]

[project.optional-dependencies]
dev = [ "pip-tools==7.4.1", "projen==0.91.6" ]

[tool.setuptools.package-data]
example = [ "py.typed" ]
