[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "1.0.0"
description = "Example project"
readme = ""
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [ ]
dependencies = [ "pandas", "helloworld" ]

[project.optional-dependencies]
dev = [
  "mypy==1.14.*",
  "pip-audit==2.*",
  "pip-tools==7.4.1",
  "projen==0.91.6",
  "pytest-cov==6.0.*",
  "pytest==8.3.*",
  "ruff==0.8.*"
]

[tool.setuptools.package-data]
example = [ "py.typed" ]
