[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "python"
version = "0.0.1"
description = ""
readme = ""
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = [ ]
dependencies = [
  "mypy==1.14.*",
  "pip-audit==2.*",
  "pip-tools==7.4.1",
  "projen==0.91.13",
  "pytest-cov==6.0.*",
  "pytest==8.3.*",
  "ruff==0.8.*"
]

[project.optional-dependencies]
dev = [ ]

[tool.setuptools.package-data]
python = [ "py.typed" ]
